--- a/app/src/main/res/layout/activity_bank_type.xml
+++ b/app/src/main/res/layout/activity_bank_type.xml
@@ -8,10 +8,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager" />
+        android:layout_width="368dp"
+        android:layout_height="551dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
