--- a/app/src/main/res/layout/layout_mortgage_questions.xml
+++ b/app/src/main/res/layout/layout_mortgage_questions.xml
@@ -58,16 +58,16 @@
             android:id="@+id/btn_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_gravity="end"
-            android:text="OK"
-            android:layout_alignParentRight="true"/>
+            android:text="OK" />
 
         <Button
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:layout_toLeftOf="@id/btn_ok"/>
+            android:layout_toLeftOf="@id/btn_ok"
+            android:text="Cancel" />
 
     </RelativeLayout>
 
