--- a/app/src/main/res/layout/adapter_bank_type.xml
+++ b/app/src/main/res/layout/adapter_bank_type.xml
@@ -24,37 +24,38 @@
                 android:id="@+id/tv_bank_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="RHB"
-                android:textSize="20sp"/>
-
-            <ImageView
-                android:id="@+id/iv_bank_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ic_account_balance"/>
-
+                android:textSize="20sp"
+                tools:text="RHB" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_monthly_payment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="RM 299.00"
-            android:layout_below="@id/ll_title"/>
+            android:layout_below="@id/ll_title"
+            tools:text="RM 299.00" />
 
         <TextView
             android:id="@+id/tv_total_payment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="RM 29977.00"
-            android:layout_below="@id/tv_monthly_payment"/>
+            android:layout_below="@id/tv_monthly_payment"
+            tools:text="RM 29977.00" />
 
         <TextView
             android:id="@+id/tv_interest_rate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="4.5%"
-            android:layout_below="@id/tv_total_payment"/>
+            android:layout_below="@id/tv_total_payment"
+            tools:text="4.5%" />
+
+        <ImageView
+            android:id="@+id/iv_bank_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            tools:src="@drawable/ic_account_balance"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
