--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,11 +29,11 @@
 
     <!--todo replace with proper bank logos-->
     <integer-array name="bank_list_images">
-        <item>@drawable/ic_home</item>
-        <item>@drawable/ic_directions_car</item>
-        <item>@drawable/ic_person</item>
-        <item>@drawable/ic_child_friendly</item>
-        <item>@drawable/ic_shopping_cart</item>
+        <item>@drawable/rhb_logo</item>
+        <item>@drawable/cimb_logo</item>
+        <item>@drawable/maybank_logo</item>
+        <item>@drawable/pbb_logo</item>
+        <item>@drawable/ambank_logo</item>
     </integer-array>
 
     <string-array name="bank_list_interest_rates">
