--- a/app/src/main/res/layout/fragment_loantype.xml
+++ b/app/src/main/res/layout/fragment_loantype.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/iv_loan_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="horizontal">
+        tools:src="@drawable/ic_account_balance"
+        android:layout_gravity="center"/>
 
-        <ImageView
-            android:id="@+id/iv_loan_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:src="@drawable/ic_account_balance"
-            android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/tv_loan_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem"
+        tools:text="House Loan"/>
 
-        <TextView
-            android:id="@+id/tv_loan_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="House Loan"/>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
 
 
