--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -45,7 +45,7 @@
     </string-array>
 
     <string-array name="tenure">
-        <item>Loan Tenure</item>
+        <item>Select Loan Tenure</item>
         <item>20 years</item>
         <item>25 years</item>
         <item>30 years</item>
@@ -53,7 +53,7 @@
     </string-array>
 
     <string-array name="employment">
-        <item>Employment</item>
+        <item>Select Employment Type</item>
         <item>Salaried - Private</item>
         <item>Salaried - Government</item>
     </string-array>
