--- a/app/src/main/res/menu/activity_landing_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_drawer.xml
@@ -16,12 +16,12 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:icon="@drawable/ic_action_local_phone"
+                android:title="Call Support" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Send Email" />
         </menu>
     </item>
 
