--- a/app/src/main/res/layout/content_landing.xml
+++ b/app/src/main/res/layout/content_landing.xml
@@ -6,12 +6,15 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.techclutch.finassist.LandingActivity"
-    tools:showIn="@layout/app_bar_landing">
+    tools:showIn="@layout/app_bar_landing"
+    android:background="@drawable/bg2">
 
     <FrameLayout
         android:id="@+id/fl_placeholder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
 
     </FrameLayout>
