--- a/app/src/main/res/layout/adapter_upload_document.xml
+++ b/app/src/main/res/layout/adapter_upload_document.xml
@@ -1,47 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="5dp">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/iv_doc_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:src="@drawable/ic_account_balance"
+        android:layout_alignParentLeft="true"
+        android:visibility="gone"/>
 
-        <LinearLayout
-            android:id="@+id/ll_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tv_doc_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        tools:text="Document Name"
+        android:layout_toRightOf="@id/iv_doc_logo"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="8dp"/>
 
+    <ImageView
+        android:id="@+id/iv_doc_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:src="@drawable/ic_account_balance"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="8dp"/>
+</RelativeLayout>
 
-            <ImageView
-                android:id="@+id/iv_doc_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ic_account_balance"/>
-
-            <TextView
-                android:id="@+id/tv_doc_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Document Name"
-                android:textSize="20sp"/>
-
-            <ImageView
-                android:id="@+id/iv_doc_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ic_account_balance"/>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-</android.support.v7.widget.RecyclerView>
