adding more document in the list

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -79,10 +79,12 @@
     <string-array name="document_list">
         <item>@string/document_ic</item>
         <item>@string/document_payslip</item>
+        <item>@string/document_epf</item>
+        <item>@string/document_bank_statement</item>
     </string-array>
 
     <integer-array name="document_list_images">
         <item>@drawable/ic_doc_ic</item>
-        <item>@drawable/ic_doc_payslip</item>>
+        <item>@drawable/ic_doc_payslip</item>
     </integer-array>
 </resources>
