--- a/app/src/main/res/layout/activity_home_questionaires.xml
+++ b/app/src/main/res/layout/activity_home_questionaires.xml
@@ -156,7 +156,9 @@
                     android:layout_gravity="end"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:text="OK"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
 
