--- a/app/src/main/res/layout/activity_bank_tentative_feedback.xml
+++ b/app/src/main/res/layout/activity_bank_tentative_feedback.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/bg2"
     tools:context="com.techclutch.finassist.bankfeedbacks.BankTentativeFeedbackActivity">
 
-
     <RelativeLayout
         android:id="@+id/parent"
         android:layout_width="368dp"
@@ -42,20 +41,58 @@
                 android:textStyle="bold"
                 android:text="APPROVED! =D"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:text="ALSO! You're eligible for these loans with special discounts!"/>
+
         </LinearLayout>
 
-
-        <Button
-            android:id="@+id/btn_done"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:text="Done"
-            android:layout_marginRight="20dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:gravity="center"
+            android:layout_alignParentEnd="true">
+
+            <Button
+                android:id="@+id/btn_furniture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:text="Furniture"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_alignParentBottom="true"/>
+
+            <Button
+                android:id="@+id/btn_renovation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:text="Renovation"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_alignParentBottom="true"/>
+
+            <Button
+                android:id="@+id/btn_done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@color/Orange"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:text="No Thanks"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"/>
+
+        </LinearLayout>
+
 
 
     </RelativeLayout>
