--- a/app/src/main/res/layout/activity_upload_document.xml
+++ b/app/src/main/res/layout/activity_upload_document.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/bg2"
     tools:context="com.techclutch.finassist.uploaddocuments.UploadDocumentActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -42,12 +43,11 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginRight="8dp"
+            android:layout_alignParentRight="true"
             android:layout_marginBottom="16dp"
+            android:layout_marginRight="8dp"
             android:text="Continue" />
-
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
