--- a/app/src/main/res/layout/layout_mortgage_questions.xml
+++ b/app/src/main/res/layout/layout_mortgage_questions.xml
@@ -4,14 +4,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:text="Please fill in these details"
+        android:layout_alignParentTop="true"/>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_property_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_alignParentTop="true">
+        android:layout_below="@id/tv_header">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_property_price"
