--- a/app/src/main/res/layout/activity_furniture_loans.xml
+++ b/app/src/main/res/layout/activity_furniture_loans.xml
@@ -1,12 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/list"
-android:name="com.techclutch.finassist.banktypes.BankTypeActivity"
+android:name="com.techclutch.finassist.merchants.FurnitureLoansActivity"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_marginLeft="16dp"
 android:layout_marginRight="16dp"
 app:layoutManager="LinearLayoutManager"
-tools:context="com.techclutch.finassist.banktypes.BankTypeActivity"
-tools:listitem="@layout/adapter_bank_type" />
+tools:context="com.techclutch.finassist.merchants.FurnitureLoansActivity"
+tools:listitem="@layout/adapter_merchant_type" />
