--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="Orange">#FF4500</color>
-
+    <color name="LightBlue">#6495ED</color>
 </resources>
