--- a/app/src/main/res/layout/app_bar_landing.xml
+++ b/app/src/main/res/layout/app_bar_landing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techclutch.finassist.LandingActivity">
+    tools:context="com.techclutch.finassist.main.LandingActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
