--- a/app/src/main/res/layout/content_landing.xml
+++ b/app/src/main/res/layout/content_landing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.techclutch.finassist.LandingActivity"
+    tools:context="com.techclutch.finassist.main.LandingActivity"
     tools:showIn="@layout/app_bar_landing"
     android:background="@drawable/bg2">
 
